Consolidating CSS rules to fix a bug where css rules in other files were applying to different pages. Solved by using custom classes instead of html tags.

--- a/cms-app/src/index.css
+++ b/cms-app/src/index.css
@@ -6,6 +6,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  min-height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 * {
   box-sizing: border-box;
 }
